# otus_algorithms

./: Readme.md
01_square/: Readme.md  main.cpp
02_test_system/: CMakeLists.txt  basic_test.cpp  basic_test.h  main_string.cpp  main_tickets.cpp  string_test.cpp  string_test.h  test_system.cpp  tickets_test.cpp  tickets_test.h
03_algebra/: CMakeLists.txt  power_decomposition_test.cpp  power_half_test.cpp  power_half_test.h  power_test.cpp  power_test.h
03_powers/: basic_test.cpp  basic_test.h  main_power.cpp  main_power_decomposition.cpp  main_power_half.cpp  power_decomposition_test.h  power_test.cpp  power_test.h  test_system.h
